# postgres-with-vector-bm25

./: Dockerfile  download-dictionaries.sh
lindera-cache/lindera-cc-cedict/: Cargo.toml  build.rs
lindera-cache/lindera-dictionary/: Cargo.toml
lindera-cache/lindera-ipadic/: Cargo.toml  build.rs
lindera-cache/lindera-ipadic-neologd/: Cargo.toml  build.rs
lindera-cache/lindera-ko-dic/: Cargo.toml  build.rs
lindera-cache/lindera-unidic/: Cargo.toml  build.rs
