[package]
name = "lindera-cc-cedict"
version = "0.40.2"
edition = "2021"
description = "A Japanese morphological dictionary for CC-CEDICT."
documentation = "https://docs.rs/lindera-cc-cedict"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["chinese", "morphological", "dictionary", "cc-cedict"]
categories = ["text-processing"]
license = "MIT"

[features]
cc-cedict = []
compress = ["lindera-dictionary/compress"]

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
once_cell = "1.21.3"
lindera-dictionary = "0.40.2"

[build-dependencies]
tokio = {version = "1.44.1", features = ["rt-multi-thread", "macros"] }
lindera-dictionary = "0.40.2"
