[package]
name = "lindera-dictionary"
version = "0.40.2"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-dictionary"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []
compress = []
memmap = ["dep:memmap2"]
build_rs = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
byteorder = "1.5.0"
csv = "1.3.1"
derive_builder = "0.20.2"
encoding = "0.2.33"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
flate2 = "1.1.0"
glob = "0.3.2"
log = "0.4.27"
once_cell = "1.21.3"
serde = "1.0.219"
tar = "0.4.44"
thiserror = "2.0.12"
yada = "0.5.1"
memmap2 = { version = "0.9.5", optional = true }

[dependencies.reqwest]
version = "0.12.15"
optional = true
